--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,14 @@
             msPerTick: Math.round(1000 / 16),
             windPhi: 0,
           },
+          renderer: {
+            containerElement: document.getElementById("container"),
+          },
         });
       };
     </script>
   </head>
-  <body></body>
+  <body>
+    <main id="container"></main>
+  </body>
 </html>
