add bufferMs option to noise analyser

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
             msPerTick: Math.round(1000 / 16),
             windPhi: 0,
           },
+          noiseAnalyser: {
+            bufferMs: Math.round(1000 / 16),
+          },
           renderer: {
             containerElement: document.getElementById("container"),
           },
