add firstCandleWindForceFactor option

--- a/src/local.html
+++ b/src/local.html
@@ -13,6 +13,7 @@
             candleCount: 26,
             candleLifetimeMs: Math.round(1000 * 0.05),
             targetWindForcePerClient: 0.005,
+            firstCandleWindForceFactor: 1.5,
           },
           clientEngine: {
             msPerTick: Math.round(1000 / 16),
