update local demo template

--- a/src/local.html
+++ b/src/local.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Birthday Cake</title>
+    <title>Birthday Cake (local demo)</title>
     <script>$LOCAL_DIST_JS</script>
     <script>
       window.onload = () => {
@@ -30,6 +30,8 @@
     </script>
   </head>
   <body>
+    <h1>Birthday Cake (local demo)</h1>
+    <p>Blow into the microphone to blow out the candles!</p>
     <main id="container"></main>
   </body>
 </html>
